--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "express-validator": "^7.0.1",
+    "mongoose": "^8.0.3",
+    "uuid": "^9.0.1"
   }
 }
